# Speculator

./: .gitignore  .gitmodules  README.md  aquila.i  aquila_simplefft.lua  aquila_wrap.cxx  cufft.h  fftw.hpp  fftw3.i  fftw3_wrap.cxx  gist.i  gist_wrap.cxx  ipp.hpp  make_aquila.sh  make_array.sh  make_fftw3.sh  make_sample.sh  make_xcorr.sh  mkl_array.hpp  mkl_matrix.hpp  mkl_vector.hpp  mlptest  samples.i  samples_wrap.cxx  test_array.lua  test_minfft.lua  xcorr.i
Algorithms/: ALLPASS.C  BITREV.C  BLOCKCON.C  CAN.C  CAN2.C  CAN3.C  CAS.C  CAS2CAN.C  CCAN.C  CCAN2.C  CCAS.C  CCAS2.C  CDELAY.C  CDELAY2.C  CFIR.C  CFIR1.C  CFIR2.C  CHEBY.C  CMPLX.H  COMPLEX.C  CONV.C  CORR.C  CSOS.C  CSOS2.C  DAC.C  DELAY.C  DELTA.C  DFT.C  DFTMERGE.C  DIR.C  DIR2.C  DOT.C  DTFT.C  DTFTR.C  FFT.C  FIR.C  FIR2.C  FIR3.C  GDELAY2.C  GRAN.C  (+25 more)
Analyzer/Aquila/: make_aquila.sh
Analyzer/DynamicAudioNormalizer/: CMakeLists.txt  README.md
Analyzer/GNUPlot/: make_gnuplot.sh
Analyzer/Gist/: gist.i
Analyzer/PhaseVocoder/: phase_vocoder_wrap.cxx
Analyzer/Plot/: gnuplot_wrap.cxx
Analyzer/SampleVector-Toolkit/: array.py  eigen-array2d.i  eigen-matrix.i  make_eigen.sh  mkl.hpp  mkl_array.hpp  mkl_matrix.hpp  samples.hpp
Analyzer/Seperate/fasst/v2.2.2/src_dir/: CMakeLists.txt  FindFFTW.cmake  README.markdown
Analyzer/Seperate/fasst/v2.2.2/src_dir/doc/: build-linux.markdown  build-windows.markdown
Analyzer/Seperate/fasst/v2.2.2/src_dir/examples/: QuickStarter_win.txt.in  install_peass.bat  install_peass.sh
Analyzer/Seperate/fasst/v2.2.2/src_dir/examples/example1/: Shannon_Hurley__Sunrise__inst__license.txt  example1.m.in
Analyzer/Seperate/fasst/v2.2.2/src_dir/examples/example2/: example2.m.in
Analyzer/Seperate/fasst/v2.2.2/src_dir/examples/example2_old/: CMakeLists.txt  example2_old.m.in
Analyzer/Seperate/fasst/v2.2.2/src_dir/examples/example3/: CMakeLists.txt  example3.m.in
Analyzer/Seperate/fasst/v2.2.2/src_dir/examples/example3_old/: CMakeLists.txt
Analyzer/Seperate/fasst/v2.2.2/src_dir/examples/tools/: computeSteeringVectorFromDirection.m  get_freqScaleParams.m  get_freqScaleParams.py
Analyzer/Seperate/fasst/v2.2.2/src_dir/packaging/osx/: conclusion.html.in  postinstall.in  readme_libsndfile_dylib.txt  welcome.html.in
Analyzer/Seperate/fasst/v2.2.2/src_dir/packaging/win/: NSIS.template.in
Analyzer/Seperate/fasst/v2.2.2/src_dir/scripts/MATLAB/: fasst_loadXML.m  fasst_writeRx.m  fasst_writeXML.m
Analyzer/Seperate/fasst/v2.2.2/src_dir/src/: CMakeLists.txt  comp-rx_profile.cpp  model-estimation.cpp  model-estimation_profile.cpp
Analyzer/Seperate/fasst/v2.2.2/src_dir/src/fasst/: Abstract_TFRepr.h  Audio.h  ERBLETRepr.h  ERBRepr.cpp  EigenTypeComparator.h  InputParser.cpp  MixCovMatrix.cpp  MixCovMatrix.h  NonNegMatrix.cpp  NonNegMatrix.h  STFTRepr.cpp  Sources.h  SpectralPower.cpp  Wiener_Interface.h  typedefs.h
Analyzer/Seperate/fasst/v2.2.2/src_dir/src/fasst_test/functionnal/: model-estimation_test.cpp  source-estimation_test.cpp
Analyzer/Seperate/fasst/v2.2.2/src_dir/src/fasst_test/functionnal/ressources/ex2/: sources.xml
Analyzer/Seperate/fasst/v2.2.2/src_dir/src/fasst_test/unit/: Audio_test.cpp
Analyzer/Vector-Toolkit/: .make_vtk.sh.swp  make_vtk.sh  vtk.i  vtk_wrap.cxx
Analyzer/ccaubio/: aubio_wrap.cxx  fft.i  make_ccaubio.sh  mel.i  sampler.i
Analyzer/libKeyFinder/: keyfinder.i  make_keyfinder.sh
Analyzer/libgha/: libgha.i
Analyzer/libstft/: README.md  fft.h  libstft.i
Aquila/: aquila_wrap.cxx
Beat/bpm-detector/: CMakeLists.txt  Makefile  README.md  bpm_detector.c  bpm_detector.h
Convolution/: Convolver.hpp  README.md  SpectrumConvolutionFilters.hpp
Convolution/CMatrix/: README.md  jd_CMatrix.jucer
Convolution/OverlapADD-SAVE-methods/: Commands.md  OverlapADD.m  OverlapSAVE.m  (+1 more)
Convolution/pffft/kissfft/: .gitignore  CMakeLists.txt
GPU/: cufft.i
Gist/: make_gist.sh
ML/: array_float.h  barracuda.cpp  cranium.lua  cube_float.h  doublemath.cu  field_float.h  float_array.cu  floatcube.cu  floatfield.cu  floatmatrix.cu  ga  gmon.out  gpu.h  make_cuda.save  make_cudas  make_cufft.sh  make_test  make_xor  modules  sum.lua.save  test.cpp  vector_double.h  vf.h  viperfish.h  viperfish_double.h  viperfish_wrap.cxx  xor  xor.cpp
Seperate/fasst/v2.2.2/src_dir/examples/: CMakeLists.txt  QuickStarter_mac.txt.in
Seperate/fasst/v2.2.2/src_dir/examples/example1/: CMakeLists.txt  example1.py.in
Seperate/fasst/v2.2.2/src_dir/examples/example2/: CMakeLists.txt  LICENSE.txt
Seperate/fasst/v2.2.2/src_dir/examples/example2_old/: LICENCE.txt
Seperate/fasst/v2.2.2/src_dir/examples/example3/: LICENSE.txt  example3.py.in
Seperate/fasst/v2.2.2/src_dir/examples/example3_old/: example3_old.m.in
Seperate/fasst/v2.2.2/src_dir/examples/tools/: CMakeLists.txt
Seperate/fasst/v2.2.2/src_dir/gtest-1.8.0/: CMakeLists.txt
Seperate/fasst/v2.2.2/src_dir/gtest-1.8.0/googletest/src/: gtest_main.cc
Seperate/fasst/v2.2.2/src_dir/packaging/osx/: CMakeLists.txt  distribution.xml.in  generate_osx_installer.sh.in
Seperate/fasst/v2.2.2/src_dir/scripts/MATLAB/: CMakeLists.txt  fasst_compute_mixture_covariance_matrix.m.in  fasst_estimate_source_parameters.m.in  fasst_estimate_sources.m.in  fasst_loadRx.m
Seperate/fasst/v2.2.2/src_dir/scripts/python/: CMakeLists.txt  fasst.py.in
Seperate/fasst/v2.2.2/src_dir/src/fasst_test/functionnal/: CMakeLists.txt  comp-rx_test.cpp
Seperate/fasst/v2.2.2/src_dir/src/fasst_test/functionnal/ressources/ex1/: sources.xml  sources.xml.new
Seperate/fasst/v2.2.2/src_dir/src/fasst_test/functionnal/ressources/ex2/: sources.xml.new
Seperate/fasst/v2.2.2/src_dir/src/fasst_test/functionnal/ressources/ex3/: sources.xml  sources.xml.new
Seperate/fasst/v2.2.2/src_dir/src/fasst_test/porting/: CMakeLists.txt  ERBLETRepr_port.cpp
Seperate/fasst/v2.2.2/src_dir/src/fasst_test/unit/: CMakeLists.txt  ERBLETRepr_test.cpp  MixCovMatrix_test.cpp  MixingParameter_test.cpp  NonNegMatrix_test.cpp  STFTRepr_test.cpp  Source_test.cpp  Sources_test.cpp  XMLDoc_test.cpp
Seperate/fasst/v2.2.2/src_dir/src/tinyxml2/: CMakeLists.txt
Transfer/: list
(+787 files in other folders)
